--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         <div class="middle">
           <div class="status__sect">
             <div class="status__img gradient">
-              <img src="images/3.jpg" alt="" />
+              <img src="3.jpg" alt="" />
             </div>
             <div class="status__img gradient">
               <img src="images/biisana.jpg" alt="" />
@@ -499,7 +499,7 @@
               <div class="profile__container">
                 <div class="account__profile-container">
                   <div class="account__profile gradient">
-                    <img src="images/3.jpg" alt="" />
+                    <img src="3.jpg" alt="" />
                   </div>
                   <div class="likee">
                     <strong>the_chef_girlfriend</strong>
@@ -515,7 +515,7 @@
               </div>
 
               <div class="account__img-container">
-                <video src="images/v1.mp4" id="myVideo" class="myVideo"></video>
+                <video src="v1.mp4" id="myVideo" class="myVideo"></video>
                 <div class="volume">
                   <i class="fas fa-volume-mute audioIconImg"></i>
                 </div>
@@ -567,7 +567,7 @@
               <div class="profile__container">
                 <div class="account__profile-container">
                   <div class="account__profile">
-                    <img src="images/8.jpg" alt="" />
+                    <img src="8.jpg" alt="" />
                   </div>
                   <div class="likee">
                     <strong>jonja__000 </strong> <span></span>1w <span></span
@@ -580,7 +580,7 @@
               </div>
 
               <div class="account__img-container">
-                <video src="images/v2.mp4" id="myVideo" class="myVideo"></video>
+                <video src="v2.mp4" id="myVideo" class="myVideo"></video>
                 <div class="volume">
                   <i class="fas fa-volume-mute audioIconImg"></i>
                 </div>
@@ -632,7 +632,7 @@
               <div class="profile__container">
                 <div class="account__profile-container">
                   <div class="account__profile">
-                    <img src="images/9.jpg" alt="" />
+                    <img src="9.jpg" alt="" />
                   </div>
                   <div class="likee">
                     <strong>lucas </strong> <span></span>2w <span></span
@@ -645,7 +645,7 @@
               </div>
 
               <div class="account__img-container">
-                <video src="images/v3.mp4" id="myVideo" class="myVideo"></video>
+                <video src="v3.mp4" id="myVideo" class="myVideo"></video>
                 <div class="volume">
                   <i class="fas fa-volume-mute audioIconImg"></i>
                 </div>
@@ -697,7 +697,7 @@
               <div class="profile__container">
                 <div class="account__profile-container">
                   <div class="account__profile gradient">
-                    <img src="images/10.jpg" alt="" />
+                    <img src="10.jpg" alt="" />
                   </div>
                   <div class="likee">
                     <strong>haddySallay__000 </strong> <span></span>1d
@@ -710,7 +710,7 @@
               </div>
 
               <div class="account__img-container">
-                <video src="images/v4.mp4" id="myVideo" class="myVideo"></video>
+                <video src="v4.mp4" id="myVideo" class="myVideo"></video>
                 <div class="volume">
                   <i class="fas fa-volume-mute audioIconImg"></i>
                 </div>
@@ -763,7 +763,7 @@
         <div class="login__account">
           <div class="user">
             <div class="use__left">
-              <div class="user__img"><img src="images/11.png" alt="" /></div>
+              <div class="user__img"><img src="11.png" alt="" /></div>
               <div class="user__name" style="font-size: 1.2rem">
                 <div style="font-weight: bold">bangalifodaysankanu</div>
                 <div style="color: rgb(146, 143, 143)">
@@ -782,7 +782,7 @@
           </div>
           <div class="user">
             <div class="use__left">
-              <div class="user__img"><img src="images/4.jpg" alt="" /></div>
+              <div class="user__img"><img src="4.jpg" alt="" /></div>
               <div class="user__name" style="font-size: 1.2rem">
                 <div style="font-weight: bold">sonitaswara</div>
                 <div style="color: rgb(146, 143, 143)">Suggested for you</div>
@@ -794,7 +794,7 @@
           </div>
           <div class="user">
             <div class="use__left">
-              <div class="user__img"><img src="images/5.jpg" alt="" /></div>
+              <div class="user__img"><img src="5.jpg" alt="" /></div>
               <div class="user__name" style="font-size: 1.2rem">
                 <div style="font-weight: bold">ratanukhila</div>
                 <div style="color: rgb(146, 143, 143)">Suggested for you</div>
@@ -807,7 +807,7 @@
 
           <div class="user">
             <div class="use__left">
-              <div class="user__img"><img src="images/6.jpg" alt="" /></div>
+              <div class="user__img"><img src="6.jpg" alt="" /></div>
               <div class="user__name" style="font-size: 1.2rem">
                 <div style="font-weight: bold">situu.k</div>
                 <div style="color: rgb(146, 143, 143)">
@@ -821,7 +821,7 @@
           </div>
           <div class="user">
             <div class="use__left">
-              <div class="user__img"><img src="images/7.jpg" alt="" /></div>
+              <div class="user__img"><img src="7.jpg" alt="" /></div>
               <div class="user__name" style="font-size: 1.2rem">
                 <div style="font-weight: bold">emmanuelabigail86</div>
                 <div style="color: rgb(146, 143, 143)">
