--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
           </div>
           <div class="user">
             <div class="use__left">
-              <div class="user__img"><img src="images/8.jpg" alt="" /></div>
+              <div class="user__img"><img src="8.jpg" alt="" /></div>
               <div class="user__name" style="font-size: 1.2rem">
                 <div style="font-weight: bold">ritalllll.m</div>
                 <div style="color: rgb(146, 143, 143)">
