--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
       </nav>
       <div class="side__bar">
         <div class="logo">
-          <img src="images/instagram-text-icon-removebg-preview.png" alt="" />
+          <img src="instagram-text-icon-removebg-preview.png" alt="" />
           <i class="fab fa-instagram"></i>
         </div>
         <div class="side__bar-icon">
@@ -483,14 +483,14 @@
               <img src="3.jpg" alt="" />
             </div>
             <div class="status__img gradient">
-              <img src="images/biisana.jpg" alt="" />
+              <img src="biisana.jpg" alt="" />
             </div>
           </div>
 
           <div class="accounts">
             <div class="refresh">
               <div class="refresh__img">
-                <img src="images/illo-confirm-refresh-light.png" alt="" />
+                <img src="illo-confirm-refresh-light.png" alt="" />
               </div>
               <div><h1>You're all caught up</h1></div>
               <div>You've all new posts from the past 3 days.</div>
